[tool.poetry]
name = "tg_listener"
version = "0.1.0"
description = ""
authors = ["panyanyany <568397440@qq.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
click = "^8.0.3"
python-socks = {extras = ["asyncio"], version = "^2.0.0"}
Telethon = "^1.24.0"
peewee = "^3.14.8"
arrow = "^1.2.1"
mysqlclient = "^2.1.0"
psutil = "^5.9.0"
pyairtable = "^1.0.0"
uniswap-python = "^0.5.5"
multicall = "^0.3.0"
dacite = "^1.6.0"
beeprint = "^2.4.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
